yaml_files/pod-nginx.yml
apiVersion: v1
kind: Pod
metadata:
    name: nginx-pod
spec:
    containers:
        - name: nginx-container
          image: nginx
