yaml_files/service-1.yml
apiVersion: v1
kind: Service
metadata:
  name: mytest-service
spec:
  selector:
    app: ft-server2
  ports:
      - protocol: TCP
        port: 80
        targetPort: 80
