yaml_files/service-mariadb.yml
apiVersion: v1
kind: Service
metadata:
  name: mariadb-service
spec:
  selector:
    app: mariadb
  ports:
      - protocol: TCP
        port: 3306
        targetPort: 3306
